--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -34,7 +34,9 @@ jobs:
 
       - name: Build APK with Gradle
         working-directory: android
-        run: ./gradlew assembleDebug
+        run: |
+          chmod +x gradlew
+          ./gradlew assembleDebug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
